@@ -76,6 +76,7 @@
 			<property name="encapsulants" type="TestEncapsulant" relation="ManyToMany" />
 			
 			<property name="url" type="HttpUrl" size="256" required="false" />
+			<property name="properties" type="PgHstore" required="false" />
 			
 			<property name="ip" type="Inet" required="false" />
 			
